# wobble

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.cpp  config.h  job.cpp  job.h  process_platform.cpp  report.cpp  report.h  schedule.cpp  schedule.h  util.cpp  util.h  wobble.cpp
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
argagg/: CMakeLists.txt
date/: CMakeLists.txt
fmt/: CMakeLists.txt
loguru/: CMakeLists.txt  loguru.cpp
test/: run.py
test/config/: config.json  inc.py  job1.json  job2.json  job3.json  rep.json
test/config/subdir/: job4.json
tiny-process-library/: CMakeLists.txt  process_platform.cpp
